# nlq-data-platform

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api_router.py
app/api/v1/endpoints/: __init__.py  ai.py  auth.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: document.py  user.py
app/repositories/: __init__.py  document_repository.py  user_repository.py
app/services/: ai_service.py  llm_service.py  user_service.py
app/tests/: test_users.py
app/utils/: helpers.py
backend/: Dockerfile  README.md  __init__.py  main.py  run.py
backend/api/v1/: __init__.py  api_router.py
backend/api/v1/endpoints/: ai.py  auth.py  users.py
backend/core/: config.py  logging.py  security.py
backend/db/: base.py  init_db.py  session.py
backend/models/: document.py  user.py
backend/repositories/: document_repository.py  user_repository.py
backend/schemas/: ai.py  user.py
backend/services/: ai_service.py  llm_service.py  user_service.py
backend/tests/: test_users.py
etl/: Dockerfile  README.md  __init__.py  main.py
etl/checkpoint/: __init__.py  manager.py
etl/config/: __init__.py  tables.yaml
etl/readers/: __init__.py  mysql_reader.py
etl/spark/: session.py
etl/utils/: logger.py
etl/validation/: __init__.py  validators.py
etl/writers/: __init__.py  s3_writer.py
retail_db/: categories.json  customers.json  db_schema.json  departments.json  order_items.json  orders.json  products.json
