[project]
name = "nlq-data-platform"
version = "0.1.0"
description = "Production-grade NLQ platform with FastAPI-powered RAG pipeline and AWS data engineering infrastructure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.124.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-groq>=1.1.1",
    "langchain-google-genai>=4.1.3",
    "ipykernel>=7.1.0",
    "pinecone>=8.0.0",
    "openai>=2.15.0",
    "pinecone-client>=6.0.0",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
]
